<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_detail.MovieDetailsFragment">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/movie_backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/poster_top_margin"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvMovieNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:text="@string/movie_title_example"
        android:textSize="@dimen/double_extra_large_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop" />

    <View
        android:id="@+id/star"
        android:layout_width="@dimen/ic_star_width"
        android:layout_height="@dimen/ic_star_height"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        android:background="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieNameDetails" />

    <TextView
        android:id="@+id/tv_vote_average_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_extra_small_margin"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        android:text="@string/vote_average_example"
        app:layout_constraintStart_toEndOf="@+id/star"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieNameDetails" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenresDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster"
        tools:listitem="@layout/item_genre" />

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/movie_overview_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvGenresDetail" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        android:layout_marginEnd="@dimen/extra_small_margin"
        android:text="@string/release_date_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieNameDetails" />
</androidx.constraintlayout.widget.ConstraintLayout>