<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding"
    tools:context=".ui.movies.MoviesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPopularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/double_extra_large_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvShowPopularMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/show_all"
                    android:textColor="@color/showAllTextColor"
                    android:textSize="@dimen/extra_large_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularMovies"
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTopRatedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/top_rated"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/double_extra_large_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvShowTopRatedMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/show_all"
                    android:textColor="@color/showAllTextColor"
                    android:textSize="@dimen/extra_large_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRatedMovies"
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNowPlayingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/now_playing"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/double_extra_large_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvShowNowPlayingMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/show_all"
                    android:textColor="@color/showAllTextColor"
                    android:textSize="@dimen/extra_large_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNowPlayingMovies"
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUpcomingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upcoming"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/double_extra_large_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvShowUpcomingMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/show_all"
                    android:textColor="@color/showAllTextColor"
                    android:textSize="@dimen/extra_large_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingMovies"
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>